--- a/package.yml
+++ b/package.yml
@@ -2,3 +2,5 @@ name: MooCells
 author: NKjoep
 category: Forms
 tags: [forms, interface, calculator, cells, validator]
+docs: https://github.com/NKjoep/MooCells/
+demo: http://nkjoep.github.com/MooCells/
