trying to insert this plugin into moofoorge website. meh.

--- a/package.yml
+++ b/package.yml
@@ -4,3 +4,4 @@ category: Forms
 tags: [forms, interface, calculator, cells, validator]
 docs: https://github.com/NKjoep/MooCells/
 demo: http://nkjoep.github.com/MooCells/
+demo: http://jsfiddle.net/dimitar/GGAa5/
